Remove support for springloaded agent